--- a/css/about.css
+++ b/css/about.css
@@ -1,14 +1,16 @@
 body {
     background-color: #9a859c;
 }
-
+.two {
+    display: contents;
+}
 .list {
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 25vh;
+    margin-top: 20vh;
 }
 
 .me {
-    border-radius: 30%;
+    border-radius: 20%;
 }
